# manga-server

./: Cargo.toml  config.toml  copy_manga.toml  dmzj.toml  eh.toml  mapping.txt  path.txt  shaft.toml
res/css/: a.css  index.css  manga.css  reader.css
res/html/: 404.html  index.html  index_all.html  manga.html  reader.html
src/: backend.rs  copy_manga.rs  dmzj.rs  eh.rs  lib.rs  main.rs  manga_list.rs  request_resolver.rs  shaft.rs  utils.rs
