[package]
name = 'manga-server'
version = '0.1.0'
edition = '2021'

[dependencies]
lazy_static = '1.4.0'
pollster = '0.3.0'
serde_json = '1.0.96'
toml = '0.7.4'
url = '2.4.0'
walkdir = '2.3.3'

[dependencies.anyhow]
version = '1.0.71'
features = ['backtrace']

[dependencies.async_zip]
version = '0.0.15'
features = ['full']

[dependencies.serde]
version = '1.0.164'
features = ['serde_derive']

[dependencies.hyper]
version = '0.14.26'
features = ['full']

[dependencies.tokio]
version = '1.28.2'
features = ['full']
